public/css/app.css
body{
	position: relative;
	background-color: #fffaed;
}
*{
	font-family: 'Roboto Slab', serif;
}
#head{
	height: 125px;
	border: 1px solid black;
	padding: 0px;
	margin: 0px;
	background-image: url("../img/bridge2.jpg");
	background-size: 100%;
	background-repeat: no-repeat;
}
header{
	margin:0px;
}
#topLogo{
	height:50px;
	width:200px;
	background-color: #ffffff;
	margin: 0px;
	padding: 0px;
}
#menu{
	margin-top: 0px;
	padding:16px;
	height:50px;
	background-color: #879ac9;
}

ul {
	color: #fffaed;
    list-style-type: none;
    /*margin-top: 60px;*/
    padding: 0;
}

li {
    display: inline;
    margin:15px;
}
#appName{
	font-size: 50px;
	float:right;
	margin: 0px;
}
#main{
	padding: 10px;
	margin: 20px;
	margin-top: 60px;
	background-color:#d4dbff;
	border: 1px solid blue;
	border-radius: 5px;
	height: 700px;
	box-shadow: inset 0 0 10px #777777;
}
#one{
	height:700px;
	border: 1px solid blue;
	border-radius: 4px;
	display: inline-block;
	background-color: #879ac9;
	box-shadow: inset 0 0 10px #000000;

}

#route{
	height: 200px;
	width: 250px;
	border: 1px solid #242942;
	padding: 10px;
	margin: 20px;
	background-color: #fffaed;
	border-radius: 4px;
	box-shadow: inset 0 0 10px #777777;

}

#login{
	height: 200px;
	width: 250px;
	border: 1px solid #242942;
	padding: 10px;
	margin: 20px;
	background-color: #fffaed;
	border-radius: 4px;
	box-shadow: inset 0 0 10px #777777;
}
#user{
	margin:10px;
}
#email{
	margin: 10px;
}
#password{
	margin: 10px;
}
#map{
	display: inline-block;
	height:90%;
	width:50%;
	border: 5px solid #242942;
	padding:10px;
	margin: 10px;
	float: right;
	border-radius: 6px;
	box-shadow: 4px 5px 8px 3px #777777;
}
#stripes{
	width: 100%;
	height: 150px;
}
#curves{
	width: 98%;
	margin-top: -20px;

}

#foot{
	height: 75px;
	width: 100%;
	border: 1px solid black;
	position: relative;
	bottom: -200px;
	padding: 0px;
	background-color: #879ac9;

}
#footImage{
	height:50px;
	width:200px;
	background-color: #ffffff;
	margin: 0px;
	padding: 0px;
}
#bottomLogo{
	float: right;
	padding-top: 10px;
	margin-right: 50px;


}

